[gd_scene load_steps=8 format=3 uid="uid://coxouhr3gnr2b"]

[ext_resource type="Script" uid="uid://de0tx6ipr51rl" path="res://painting/tools_panel.gd" id="1_q5h6q"]
[ext_resource type="Texture2D" uid="uid://cdqq0m3rrlbva" path="res://paint_tools.png" id="2_p25aq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_npkcn"]
bg_color = Color(0.2, 0.2, 0.2, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_v0gbg"]
atlas = ExtResource("2_p25aq")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_j7akv"]
atlas = ExtResource("2_p25aq")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_63q87"]
atlas = ExtResource("2_p25aq")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t52fe"]
atlas = ExtResource("2_p25aq")
region = Rect2(16, 16, 16, 16)

[node name="ToolsPanel" type="Panel"]
custom_minimum_size = Vector2(350, 600)
theme_override_styles/panel = SubResource("StyleBoxFlat_npkcn")
script = ExtResource("1_q5h6q")
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TabNameLineEdit" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="CanvasDepthContainer" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="LabelCanvasDepth" type="Label" parent="VBoxContainer/CanvasDepthContainer"]
layout_mode = 2
text = "Depth"

[node name="CanvasDepthSlider" type="HSlider" parent="VBoxContainer/CanvasDepthContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = -1.0
max_value = 3.0
step = 0.05

[node name="ResolutionHeader" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Canvas resolution"

[node name="ResolutionRow" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="LabelW" type="Label" parent="VBoxContainer/ResolutionRow"]
layout_mode = 2
text = "W"

[node name="ResolutionW" type="SpinBox" parent="VBoxContainer/ResolutionRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 4096.0
value = 1024.0

[node name="LabelH" type="Label" parent="VBoxContainer/ResolutionRow"]
layout_mode = 2
text = "H"

[node name="ResolutionH" type="SpinBox" parent="VBoxContainer/ResolutionRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 4096.0
value = 768.0

[node name="ApplyResolutionButton" type="Button" parent="VBoxContainer/ResolutionRow"]
unique_name_in_owner = true
layout_mode = 2
text = "Apply"

[node name="LabelTools" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
text = "Selected tool: Pen"
metadata/_edit_layout_mode = 0
metadata/_edit_use_custom_anchors = false

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 12

[node name="ButtonToolPen" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
metadata/_edit_layout_mode = 0
metadata/_edit_use_custom_anchors = false

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer/ButtonToolPen"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_v0gbg")
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = false

[node name="ButtonToolPencil" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
metadata/_edit_layout_mode = 0
metadata/_edit_use_custom_anchors = false

[node name="TextureRectPencil" type="TextureRect" parent="VBoxContainer/HBoxContainer/ButtonToolPencil"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_v0gbg")
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = false

[node name="ButtonToolEraser" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
metadata/_edit_layout_mode = 0
metadata/_edit_use_custom_anchors = false

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer/HBoxContainer/ButtonToolEraser"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_j7akv")
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = false

[node name="ButtonToolRectangle" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
metadata/_edit_layout_mode = 0
metadata/_edit_use_custom_anchors = false

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer/ButtonToolRectangle"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_63q87")
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = false

[node name="ButtonToolCircle" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
metadata/_edit_layout_mode = 0
metadata/_edit_use_custom_anchors = false

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer/ButtonToolCircle"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_t52fe")
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = false

[node name="LabelBrushColor" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "Current color"
metadata/_edit_layout_mode = 0
metadata/_edit_use_custom_anchors = false

[node name="ColorPickerBrush" type="ColorPickerButton" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
metadata/_edit_layout_mode = 0
metadata/_edit_use_custom_anchors = false

[node name="BrushSettings" type="Control" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 256)
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/BrushSettings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LabelBrushSize" type="Label" parent="VBoxContainer/BrushSettings/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
text = "Brush size: 32px"
metadata/_edit_layout_mode = 0
metadata/_edit_use_custom_anchors = false

[node name="HScrollBarBrushSize" type="HScrollBar" parent="VBoxContainer/BrushSettings/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 2
min_value = 2.0
step = 1.0
value = 32.0
metadata/_edit_layout_mode = 0
metadata/_edit_use_custom_anchors = false

[node name="LabelBrushShape" type="Label" parent="VBoxContainer/BrushSettings/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
text = "Brush shape: Circle"
metadata/_edit_layout_mode = 0
metadata/_edit_use_custom_anchors = false

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/BrushSettings/VBoxContainer"]
custom_minimum_size = Vector2(128, 64)
layout_mode = 2
alignment = 1

[node name="ButtonShapeBox" type="Button" parent="VBoxContainer/BrushSettings/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
metadata/_edit_layout_mode = 0
metadata/_edit_use_custom_anchors = false

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/BrushSettings/VBoxContainer/HBoxContainer/ButtonShapeBox"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_63q87")
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = false

[node name="ButtonShapeCircle" type="Button" parent="VBoxContainer/BrushSettings/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
metadata/_edit_layout_mode = 0
metadata/_edit_use_custom_anchors = false

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/BrushSettings/VBoxContainer/HBoxContainer/ButtonShapeCircle"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_t52fe")
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = false

[node name="LabelBackgroundColor" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "Background color"
metadata/_edit_layout_mode = 0
metadata/_edit_use_custom_anchors = false

[node name="ColorPickerBackground" type="ColorPickerButton" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
color = Color(1, 1, 1, 1)
edit_alpha = false
metadata/_edit_layout_mode = 0
metadata/_edit_use_custom_anchors = false

[node name="LabelStats" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
modulate = Color(0.414062, 0.414062, 0.414062, 1)
layout_mode = 2
size_flags_vertical = 6
text = "Brush objects: 00000"
metadata/_edit_layout_mode = 0
metadata/_edit_use_custom_anchors = false

[node name="ButtonUndo" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Undo last stroke"
metadata/_edit_layout_mode = 0
metadata/_edit_use_custom_anchors = false

[node name="ButtonSave" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Save picture"
metadata/_edit_layout_mode = 0
metadata/_edit_use_custom_anchors = false

[node name="ButtonSaveProject" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Save project"

[node name="ButtonLoadProject" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Load project"

[node name="ButtonClear" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Clear picture"
metadata/_edit_layout_mode = 0
metadata/_edit_use_custom_anchors = false
